--- a/src/sass/_inner.sass
+++ b/src/sass/_inner.sass
@@ -122,7 +122,7 @@ $green: #9bc1bc
 
 // news
 .news-header
-	font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+	+reg
 	&__subtitle
 		margin-bottom: 10px
 		font-size: 30px
@@ -402,15 +402,14 @@ $green: #9bc1bc
 			border-bottom: none
 	&__more
 		margin-top: 15px
-		font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+		+med
 		font-size: 16px
-		font-weight: 500
 		color: $mint
 	.man
 		max-width: 575px
 		margin: 0 auto
 		font-size: 18px
-		font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+		+reg
 		p
 			margin-bottom: 0
 	.man__img
@@ -418,7 +417,7 @@ $green: #9bc1bc
 	.man__text
 		color: #000
 	.h4
-		font-family: 'Fira Sans', Helvetica, Arial, sans-serif
+		+reg
 	.fa-angle-right
 		position: absolute
 		top: 50%
