--- a/src/sass/_pages.sass
+++ b/src/sass/_pages.sass
@@ -96,7 +96,7 @@
 		padding: 7px 15px
 		font-size: 14px
 		vertical-align: middle
-		+roboto
+		+reg
 		&.is-active
 			background: #9bc1bc
 			color: #FFF
