--- a/src/sass/_typography.sass
+++ b/src/sass/_typography.sass
@@ -25,7 +25,6 @@ $indent: 30px
 	&__inner
 		padding: 0 55px
 	h2
-		+fira
 		+med
 		margin-bottom: 7px
 		font-size: 28px
@@ -68,8 +67,7 @@ $indent: 30px
 				height: 100%
 				width: 100%
 	figcaption
-		font-family: "Fira Sans", Helvetica, Arial, sans-serif
-		font-weight: 300
+		+light
 		> .square
 			float: left
 			margin-top: 3px
